tests/fixtures/invalid/pow_str_bool_str.py
# Cannot call pow() with Str, Bool, Str
x = pow("hello", True, "hello")
